[gd_scene load_steps=8 format=3 uid="uid://c23cob2ektv23"]

[ext_resource type="Texture2D" uid="uid://da17rkdnblco3" path="res://assets/Textures/UserInterface/ChatBubble/bubble_ellipses.png" id="1_4b2kp"]
[ext_resource type="Script" path="res://source/User Interface/Dialogue/Dialogue.gd" id="1_hrj82"]
[ext_resource type="Texture2D" uid="uid://dclir73gmrklr" path="res://assets/Textures/UserInterface/ChatBubble/bubble_lorg.png" id="2_xxejl"]
[ext_resource type="Texture2D" uid="uid://b6m7pfdquvyl6" path="res://assets/Textures/UserInterface/ChatBubble/bubble_med.png" id="3_7c6h8"]
[ext_resource type="Texture2D" uid="uid://bjcoxxhy13i6o" path="res://assets/Textures/UserInterface/ChatBubble/bubble_smol.png" id="4_njwr1"]
[ext_resource type="Texture2D" uid="uid://dp13jf3ca3gxe" path="res://assets/Textures/UserInterface/ChatBubble/bubble_soulshit.png" id="5_unepo"]
[ext_resource type="Texture2D" uid="uid://dqti24g87h323" path="res://assets/Textures/UserInterface/ChatBubble/bubble_updoot.png" id="6_xchmr"]

[node name="Dialogue" type="CanvasLayer"]
script = ExtResource("1_hrj82")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Bubble" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Bubble_Small" type="Sprite2D" parent="Control/Bubble"]
texture = ExtResource("4_njwr1")

[node name="Bubble_Med" type="Sprite2D" parent="Control/Bubble"]
texture = ExtResource("3_7c6h8")

[node name="Bubble_Chat" type="Sprite2D" parent="Control/Bubble"]
texture = ExtResource("2_xxejl")

[node name="Elipses" type="Sprite2D" parent="Control"]
texture = ExtResource("1_4b2kp")

[node name="SoulsExchange" type="Sprite2D" parent="Control"]
texture = ExtResource("5_unepo")

[node name="UpgradeExchange" type="Sprite2D" parent="Control"]
texture = ExtResource("6_xchmr")
